<resources>
    <string name="app_name">CDMaster</string>
    <string name="ForgotPW">Forgot Password ? </string>
    <string name="ClickToSignUp">Not registered yet ? Click to Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Em@il</string>
    <string name="welcome">Welcome</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="quit">QUIT</string>
    <string name="help">Help</string>
    <string name="addDevice">+</string>
    <string name="connected_device_manager">Connected Device Manager</string>
    <string name="password_6_characters_minimum">Password (6 characters minimum)</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="Signin">Already have account? Click to Signin</string>
    <string name="user_registration">User Registration</string>
    <string name="signup">Signup</string>
    <string name="paste_sms_from_user">Paste SMS from User</string>
    <string name="zeropercent">0%</string>
    <string name="device_audits">Device Audits</string>
    <string name="user_cred">User Cred</string>
    <string name="ota">OTA</string>
    <string name="delete">DELETE</string>
    <string name="action">ACTION</string>
    <string name="button_image">button image</string>
    <string name="one_time_access">One time Access ?</string>
    <string name="Time_Format_hh_mm">(HH MM)</string>
    <string name="end_time">End Time:</string>
    <string name="start_time">Start Time:</string>
    <string name="DateFormat_dd_mm_yyyy">(DD/MM/YYYY)</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="activation_date">Activation Date:</string>
    <string name="info">INFO</string>
</resources>
