<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:screenOrientation="portrait"
    android:configChanges="orientation|screenSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:layout_marginTop="40dp"
            android:layout_marginStart="50dp"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/EtEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="100dp"

            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="@string/email" />


        <EditText
            android:id="@+id/EtPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="@string/password"/>

        <Button
            android:id="@+id/ButLogin"
            android:layout_width="100dp"
            android:layout_height="45dp"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/TvSignup"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/ClickToSignUp" />

        <TextView
            android:id="@+id/TvForgotPw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@color/orange"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/ForgotPW" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>